# arc-model-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml
.github/: README.md  USAGE.md
.github/scripts/: validate_stack.py
.github/workflows/: ci.yml  python-quality.yml  validate-stack.yml
docs/: architecture.md  database-erd.md  dataflow.md  end-to-end-testing.md  inference-contract-refactor.md  usage.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_model_catalog_fields.py  0003_evaluation_results.py  0004_experiments.py  0005_drop_experiment_created_by.py  0005_experiment_runs.py  0006_drop_experiments_eval.py  0007_inference_generation_config.py  0008_generation_preset.py  0009_inference_preset_id.py  0010_inference_preset_id_index.py
mvp-plan/: 00_initial_slice.md  01_evaluation_integration.md  02_experiments.md  03_prompt_management.md  04_datasets.md  05_training.md  06_model_registry.md  07_opentelemetry.md  08_model_source_and_artifact_management.md  README.md  appendix_cicd_reference.md  appendix_makefile_reference.md
seeds/: models.local.json  presets.local.json
src/arc_model_lab/: __init__.py  config.py  main.py
src/arc_model_lab/api/: __init__.py  dependencies.py  errors.py  routes.py  schemas.py
src/arc_model_lab/api/routes/: __init__.py  evaluations.py  experiments.py  generation.py  health.py  inference.py  models.py  presets.py  summarize.py
src/arc_model_lab/api/schemas/: __init__.py  evaluations.py  experiments.py  generation.py  inference.py  models.py  preset.py  summarize.py
src/arc_model_lab/cli/: evaluations.py  experiments.py  models.py
src/arc_model_lab/clients/: __init__.py  arc_eval_client.py
src/arc_model_lab/db/: __init__.py  base.py  models.py  repositories.py  seed_models.py  seed_presets.py
src/arc_model_lab/domain/: __init__.py  enums.py  evaluation.py  exceptions.py  experiment.py  generation.py  generation_params.py  inference.py  model.py  models.py  preset.py  prompt.py
src/arc_model_lab/prompts/: __init__.py  loader.py  summarize.yaml  translate.yaml
src/arc_model_lab/services/: __init__.py  arc_eval_client.py  evaluation_batch.py  evaluation_service.py  experiment_service.py  inference_service.py  inference_workflow.py  model_catalog_service.py  model_service.py  preset_service.py  run_context.py
tests/: conftest.py
tests/api/: test_experiments_api.py  test_generation_api.py  test_inference_api.py  test_models_api.py  test_presets_api.py  test_summarize_api.py
tests/contract/: test_arc_eval_contract.py  test_lab_inference_contract.py
tests/e2e/: test_eval_smoke.py
tests/integration/: test_evaluation.py  test_experiments.py  test_preset_repository.py  test_repositories.py  test_smoke.py
tests/unit/: test_arc_eval_client.py  test_cli_evaluations.py  test_cli_experiments.py  test_cli_models.py  test_dependencies.py  test_domain.py  test_error_boundary.py  test_evaluation_batch.py  test_evaluation_service.py  test_experiment_repository.py  test_experiment_schemas.py  test_generate_kwargs.py  test_generation_config.py  test_generation_params.py  test_health.py  test_inference_service.py  test_inference_workflow.py  test_main.py  test_model_service.py  test_output_cap.py  test_prompt.py  test_prompt_library.py  test_prompt_template.py  test_seed_models.py  test_seed_presets.py
