[project]
name = "arc-model-lab"
version = "0.1.0"
description = "Minimal model inference and tracking service (HuggingFace + FastAPI + Postgres)."
readme = "README.md"
authors = [
    { name = "DimitarAtanassov", email = "dimitar789558@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "transformers>=4.44",
    "torch>=2.2",
    "accelerate>=1.0",
]

[project.scripts]
arc-model-lab = "arc_model_lab.main:run"

[dependency-groups]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "coverage>=7.6",
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
indent-width = 4
# Aligned to `requires-python = ">=3.11"`. Bump to py312 if the floor is raised.
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C90",  # mccabe complexity
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "PD",  # pandas-vet
    "PL",  # pylint
    "PERF",  # perflint
]
ignore = [
    "PLR2004",  # Magic values in comparisons
]

[tool.ruff.lint.per-file-ignores]
"tests/**/**" = ["S"]  # Don't run bandit on tests (eg flagging on assert)

[tool.ruff.lint.pylint]
max-args = 6

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: exercises a real database via testcontainers",
]

[tool.coverage.run]
source = ["src"]
branch = true
# SQLAlchemy's async engine bridges to the DBAPI through greenlets; without this,
# code executed under await (e.g. handlers reached over the ASGI transport) is
# invisible to the tracer.
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
